# HVM

./: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  WORKSPACE.bzlmod  user.bazelrc
bazel/: import_llvm.bzl  setup_llvm.bzl
src/: BUILD.bazel  jit.rs  lib.rs  main.rs
