module(
    name = "hvm",
    version = "2.0.20"
)

bazel_dep(name = "rules_rust", version = "0.46.0")
bazel_dep(name = "toolchains_llvm", version = "1.0.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm",
    llvm_version = "17.0.6",

    # See https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/repo.bzl#L115
    cxx_standard = {"": "c++20"},
)
use_repo(llvm, "llvm")
register_toolchains("@llvm//:all")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
)